kube/jenkins-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: registry.warecorp.com/jenkins/jenkins:9
          # env:
          #   - name: JAVA_OPTS
          #     value: -Djenkins.install.runSetupWizard=false
          ports:
            - name: http-port
              containerPort: 8080
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: docker-sock-volume
              mountPath: /var/run/docker.sock
      volumes:
      - name: jenkins-home
        hostPath:
          path: /srv/cluster/jenkins
          type: DirectoryOrCreate
      - name: docker-sock-volume
        hostPath:
          path: /var/run/docker.sock
          type: File
      securityContext:
        fsGroup: 1000
