kube/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  # namespace: dstest
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: jenkins.warecorp.com.

spec:
  rules:
    - host: jenkins.warecorp.com
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
      - hosts:
          - jenkins.warecorp.com
        secretName: jenkins-tls
